#124 - corrects spacing on the forth article of the featured section

--- a/themes/main/src/sass/nacional.scss
+++ b/themes/main/src/sass/nacional.scss
@@ -51,7 +51,6 @@
   article + article {
     border-top: 1px solid $gray-lighter;
     padding-top: 15px;
-    margin-top: 15px;
     @include media-query(MEDIUM) {
       border-top: 0;
       margin-top: 0;
@@ -72,6 +71,7 @@
   }
 
   article{
+    margin-bottom: 15px;
     @include media-query(MEDIUM) {
       margin-bottom: 40px;
     }
